# just-dev-backend

./: .env  .gitignore  Cargo.toml
scripts/: mock.surql  start_db.sh
src/: main.rs
src/api/: app.rs  mod.rs
src/api/handler/: agenda.rs  auth.rs  draft.rs  event.rs  mod.rs  notification.rs  project.rs  requirement.rs  task.rs  task_link.rs  task_list.rs  user.rs  util.rs  webhook.rs
src/api/model/: agenda.rs  asset.rs  draft.rs  mod.rs  notification.rs  pr.rs  project.rs  requirement.rs  status.rs  task.rs  user.rs  util.rs
src/db/: db_context.rs  mod.rs
src/db/model/: agenda.rs  draft.rs  mod.rs  notification.rs  project.rs  requirement.rs  status.rs  task.rs  user.rs
src/db/repository/: agenda.rs  draft.rs  mod.rs  notification.rs  project.rs  repo.rs  requirement.rs  task.rs  user.rs  utils.rs
src/usecase/: draft_collaboration.rs  invitation_token.rs  mod.rs  notification.rs  task_stream.rs  user.rs
src/usecase/util/: auth_backend.rs  mod.rs  notification.rs
