[package]
name = "just-dev-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-login = "0.15.3"
axum-ycrdt-websocket = "0.1.0"
base64-lib = "0.2.2"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.30"
nanoid = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
surrealdb = "1.5.3"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
yrs = "0.18.8"
